--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -16,7 +16,7 @@
 
 <div th:fragment="logo" class="">
 
-	<div class="row logo-container p-3 d-flex justify-content-between">
+	<div class="logo-container p-3 d-flex justify-content-between">
 		<span class="logo ml-2">mudi</span>
 		<span class="mt-3 mr-2">
 		<a class="text-light" href="/login" sec:authorize="!isAuthenticated()">login</a>
@@ -27,11 +27,12 @@
 
 	</div>
 
-	<div class="row" sec:authorize="isAuthenticated()">
+	<div sec:authorize="isAuthenticated()">
 		<div class="col">
 			<nav class="nav">
 				<a class="nav-link" th:href="@{/home}">Home</a>
 				<a class="nav-link" th:href="@{/usuario/pedido}">Meus Pedidos</a>
+				<a class="nav-link" th:href="@{/oferta}">Faça sua oferta</a>
 			</nav>
 		</div>
 	</div>
